[package]
name = "cipherdial"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web框架
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# 环境变量
dotenv = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 验证
validator = { version = "0.16", features = ["derive"] }
regex = "1"


[dev-dependencies]
# 测试相关
mockall = "0.12"
